Agrego páginas de contacto, servicios y actualizo redirecciones

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="DevsManager: IA, automatizacion y sistemas web a medida para negocios que quieren vender mejor y operar con menos friccion." />
@@ -29,133 +30,131 @@
     <link rel="stylesheet" href="assets/css/base.css" />
     <link rel="stylesheet" href="assets/css/home.css" />
     <link rel="icon" href="icono.png" />
-  </head>
-  <body data-page="index">
+</head>
+
+<body data-page="index">
     <div data-include="header"></div>
 
     <main>
-      <section class="page-hero home-hero">
-        <div class="container home-hero-grid">
-          <div class="hero-copy" data-reveal>
-            <span class="kicker">Tu negocio puede operar mejor</span>
-            <h1>
-              Construyo
-              <span class="hero-highlight" id="hero-rotating-text">agentes de IA</span>
-              que trabajan contigo 24/7
-            </h1>
-            <p>
-              Transformo procesos repetitivos en flujos automatizados con impacto real:
-              respuestas mas rapidas, menos carga operativa y una experiencia mas clara para tus clientes.
-            </p>
-            <div class="hero-actions">
-              <a class="btn btn-primary" href="/contacto">Quiero una propuesta</a>
-              <a class="btn btn-secondary" href="/servicios">Ver servicios</a>
+        <section class="page-hero home-hero">
+            <div class="container home-hero-grid">
+                <div class="hero-copy" data-reveal>
+                    <span class="kicker">Tu negocio puede operar mejor</span>
+                    <h1>
+                        Construyo
+                        <span class="hero-highlight" id="hero-rotating-text">agentes de IA</span> que trabajan contigo 24/7
+                    </h1>
+                    <p>
+                        Transformo procesos repetitivos en flujos automatizados con impacto real: respuestas mas rapidas, menos carga operativa y una experiencia mas clara para tus clientes.
+                    </p>
+                    <div class="hero-actions">
+                        <a class="btn btn-primary" href="/contacto">Quiero una propuesta</a>
+                        <a class="btn btn-secondary" href="/servicios">Ver servicios</a>
+                    </div>
+
+                    <div class="kpi-grid">
+                        <article class="kpi">
+                            <strong data-counter="24">0</strong>
+                            <span>horas de atencion automatizada</span>
+                        </article>
+                        <article class="kpi">
+                            <strong data-counter="40">0</strong>
+                            <span>porcentaje potencial de ahorro operativo</span>
+                        </article>
+                        <article class="kpi">
+                            <strong data-counter="7">0</strong>
+                            <span>dias para tener un MVP funcional</span>
+                        </article>
+                    </div>
+                </div>
+
+                <article class="hero-panel card" data-reveal>
+                    <div class="panel-top" aria-hidden="true">
+                        <span class="panel-dot"></span>
+                        <span class="panel-dot"></span>
+                        <span class="panel-dot"></span>
+                    </div>
+                    <img class="panel-image" src="https://images.unsplash.com/photo-1677442136019-21780ecad995?w=900&q=80" alt="Panel de automatizacion e inteligencia artificial" />
+                    <div class="chat-block">
+                        <p class="chat-bubble">Cliente: Necesito una cotizacion hoy mismo.</p>
+                        <p class="chat-bubble agent">Agente IA: Listo. Ya prepare tu PDF y agenda de seguimiento.</p>
+                        <p class="chat-bubble agent">Agente IA: Tambien enviamos recordatorio automatico al equipo comercial.</p>
+                    </div>
+                    <p class="hero-note">Menos tareas manuales, mas foco en ventas y estrategia.</p>
+                </article>
             </div>
+        </section>
 
-            <div class="kpi-grid">
-              <article class="kpi">
-                <strong data-counter="24">0</strong>
-                <span>horas de atencion automatizada</span>
-              </article>
-              <article class="kpi">
-                <strong data-counter="40">0</strong>
-                <span>porcentaje potencial de ahorro operativo</span>
-              </article>
-              <article class="kpi">
-                <strong data-counter="7">0</strong>
-                <span>dias para tener un MVP funcional</span>
-              </article>
+        <section class="section">
+            <div class="container">
+                <header class="section-head" data-reveal>
+                    <span class="kicker">Soluciones principales</span>
+                    <h2>Tu sistema digital, alineado a tus metas de negocio</h2>
+                    <p>No se trata de tener mas herramientas. Se trata de conectar las correctas con una logica clara que genere resultados medibles.</p>
+                </header>
+
+                <div class="service-overview-grid">
+                    <article class="service-card card" data-reveal>
+                        <div class="icon-chip"><i class="fa-solid fa-brain"></i></div>
+                        <h3>Agentes de IA orientados a conversion</h3>
+                        <p>Asistentes conectados a tu operacion real para responder, clasificar y dar seguimiento sin perder contexto.</p>
+                        <a href="/servicios">Ver detalle</a>
+                    </article>
+                    <article class="service-card card" data-reveal>
+                        <div class="icon-chip"><i class="fa-solid fa-gears"></i></div>
+                        <h3>Automatizacion de procesos internos</h3>
+                        <p>Integro WhatsApp, formularios, CRM, correo y documentos para eliminar pasos manuales y errores recurrentes.</p>
+                        <a href="/servicios">Ver detalle</a>
+                    </article>
+                    <article class="service-card card" data-reveal>
+                        <div class="icon-chip"><i class="fa-solid fa-laptop-code"></i></div>
+                        <h3>Sistemas web y experiencia UX</h3>
+                        <p>Desarrollo paginas y paneles con enfoque en claridad, conversion y velocidad para equipos y clientes.</p>
+                        <a href="/servicios">Ver detalle</a>
+                    </article>
+                </div>
             </div>
-          </div>
+        </section>
 
-          <article class="hero-panel card" data-reveal>
-            <div class="panel-top" aria-hidden="true">
-              <span class="panel-dot"></span>
-              <span class="panel-dot"></span>
-              <span class="panel-dot"></span>
+        <section class="section">
+            <div class="container">
+                <header class="section-head" data-reveal>
+                    <span class="kicker">Forma de trabajo</span>
+                    <h2>Ejecucion simple, resultados concretos</h2>
+                    <p>Trabajo contigo de forma directa para definir prioridades, construir rapido y optimizar con datos de uso reales.</p>
+                </header>
+
+                <div class="step-mini-grid">
+                    <article class="step-mini card" data-reveal>
+                        <strong>1</strong>
+                        <h3>Analisis inicial</h3>
+                        <p>Mapeo cuellos de botella y detecto donde la automatizacion entrega retorno primero.</p>
+                    </article>
+                    <article class="step-mini card" data-reveal>
+                        <strong>2</strong>
+                        <h3>Arquitectura</h3>
+                        <p>Diseno flujo tecnico y experiencia de usuario para que la solucion sea adoptada por tu equipo.</p>
+                    </article>
+                    <article class="step-mini card" data-reveal>
+                        <strong>3</strong>
+                        <h3>Implementacion</h3>
+                        <p>Desarrollo, conecto sistemas, pruebo escenarios reales y documento el uso operativo.</p>
+                    </article>
+                    <article class="step-mini card" data-reveal>
+                        <strong>4</strong>
+                        <h3>Mejora continua</h3>
+                        <p>Monitoreo rendimiento, itero flujos y escalo capacidades en funcion de resultados.</p>
+                    </article>
+                </div>
+
+                <div class="cta-band" data-reveal>
+                    <p><strong>Lema:</strong> "Menos tareas repetitivas. Mas decisiones inteligentes."</p>
+                    <a class="btn btn-whatsapp" href="https://wa.me/593959186832" target="_blank" rel="noopener">
+                        <i class="fa-brands fa-whatsapp"></i> Hablar por WhatsApp
+                    </a>
+                </div>
             </div>
-            <img class="panel-image" src="https://images.unsplash.com/photo-1677442136019-21780ecad995?w=900&q=80" alt="Panel de automatizacion e inteligencia artificial" />
-            <div class="chat-block">
-              <p class="chat-bubble">Cliente: Necesito una cotizacion hoy mismo.</p>
-              <p class="chat-bubble agent">Agente IA: Listo. Ya prepare tu PDF y agenda de seguimiento.</p>
-              <p class="chat-bubble agent">Agente IA: Tambien enviamos recordatorio automatico al equipo comercial.</p>
-            </div>
-            <p class="hero-note">Menos tareas manuales, mas foco en ventas y estrategia.</p>
-          </article>
-        </div>
-      </section>
-
-      <section class="section">
-        <div class="container">
-          <header class="section-head" data-reveal>
-            <span class="kicker">Soluciones principales</span>
-            <h2>Tu sistema digital, alineado a tus metas de negocio</h2>
-            <p>No se trata de tener mas herramientas. Se trata de conectar las correctas con una logica clara que genere resultados medibles.</p>
-          </header>
-
-          <div class="service-overview-grid">
-            <article class="service-card card" data-reveal>
-              <div class="icon-chip"><i class="fa-solid fa-brain"></i></div>
-              <h3>Agentes de IA orientados a conversion</h3>
-              <p>Asistentes conectados a tu operacion real para responder, clasificar y dar seguimiento sin perder contexto.</p>
-              <a href="/servicios">Ver detalle</a>
-            </article>
-            <article class="service-card card" data-reveal>
-              <div class="icon-chip"><i class="fa-solid fa-gears"></i></div>
-              <h3>Automatizacion de procesos internos</h3>
-              <p>Integro WhatsApp, formularios, CRM, correo y documentos para eliminar pasos manuales y errores recurrentes.</p>
-              <a href="/servicios">Ver detalle</a>
-            </article>
-            <article class="service-card card" data-reveal>
-              <div class="icon-chip"><i class="fa-solid fa-laptop-code"></i></div>
-              <h3>Sistemas web y experiencia UX</h3>
-              <p>Desarrollo paginas y paneles con enfoque en claridad, conversion y velocidad para equipos y clientes.</p>
-              <a href="/servicios">Ver detalle</a>
-            </article>
-          </div>
-        </div>
-      </section>
-
-      <section class="section">
-        <div class="container">
-          <header class="section-head" data-reveal>
-            <span class="kicker">Forma de trabajo</span>
-            <h2>Ejecucion simple, resultados concretos</h2>
-            <p>Trabajo contigo de forma directa para definir prioridades, construir rapido y optimizar con datos de uso reales.</p>
-          </header>
-
-          <div class="step-mini-grid">
-            <article class="step-mini card" data-reveal>
-              <strong>1</strong>
-              <h3>Analisis inicial</h3>
-              <p>Mapeo cuellos de botella y detecto donde la automatizacion entrega retorno primero.</p>
-            </article>
-            <article class="step-mini card" data-reveal>
-              <strong>2</strong>
-              <h3>Arquitectura</h3>
-              <p>Diseno flujo tecnico y experiencia de usuario para que la solucion sea adoptada por tu equipo.</p>
-            </article>
-            <article class="step-mini card" data-reveal>
-              <strong>3</strong>
-              <h3>Implementacion</h3>
-              <p>Desarrollo, conecto sistemas, pruebo escenarios reales y documento el uso operativo.</p>
-            </article>
-            <article class="step-mini card" data-reveal>
-              <strong>4</strong>
-              <h3>Mejora continua</h3>
-              <p>Monitoreo rendimiento, itero flujos y escalo capacidades en funcion de resultados.</p>
-            </article>
-          </div>
-
-          <div class="cta-band" data-reveal>
-            <p><strong>Lema:</strong> "Menos tareas repetitivas. Mas decisiones inteligentes."</p>
-            <a class="btn btn-whatsapp" href="https://wa.me/593959186832" target="_blank" rel="noopener">
-              <i class="fa-brands fa-whatsapp"></i>
-              Hablar por WhatsApp
-            </a>
-          </div>
-        </div>
-      </section>
+        </section>
     </main>
 
     <div data-include="footer"></div>
@@ -164,46 +163,43 @@
     <script src="assets/js/site.js" defer></script>
     <script src="assets/js/home.js" defer></script>
     <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@graph": [
-          {
-            "@type": "WebSite",
-            "@id": "https://devsmanager.netlify.app/#website",
-            "url": "https://devsmanager.netlify.app/",
-            "name": "DevsManager",
-            "inLanguage": "es-EC"
-          },
-          {
-            "@type": "ProfessionalService",
-            "@id": "https://devsmanager.netlify.app/#organization",
-            "name": "DevsManager",
-            "url": "https://devsmanager.netlify.app/",
-            "logo": "https://devsmanager.netlify.app/icono.png",
-            "image": "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=1200&q=80",
-            "telephone": "+593959186832",
-            "email": "jefersonalvarez009@gmail.com",
-            "areaServed": "Quito, Ecuador",
-            "description": "Automatizacion, agentes de IA y sistemas web para negocios.",
-            "sameAs": [
-              "https://wa.me/593959186832"
-            ]
-          },
-          {
-            "@type": "WebPage",
-            "@id": "https://devsmanager.netlify.app/#webpage",
-            "url": "https://devsmanager.netlify.app/",
-            "name": "DevsManager | IA y Automatizacion para negocios",
-            "isPartOf": {
-              "@id": "https://devsmanager.netlify.app/#website"
-            },
-            "about": {
-              "@id": "https://devsmanager.netlify.app/#organization"
-            },
-            "inLanguage": "es-EC"
-          }
-        ]
-      }
+        {
+            "@context": "https://schema.org",
+            "@graph": [{
+                "@type": "WebSite",
+                "@id": "https://devsmanager.netlify.app/#website",
+                "url": "https://devsmanager.netlify.app/",
+                "name": "DevsManager",
+                "inLanguage": "es-EC"
+            }, {
+                "@type": "ProfessionalService",
+                "@id": "https://devsmanager.netlify.app/#organization",
+                "name": "DevsManager",
+                "url": "https://devsmanager.netlify.app/",
+                "logo": "https://devsmanager.netlify.app/icono.png",
+                "image": "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=1200&q=80",
+                "telephone": "+593959186832",
+                "email": "jefersonalvarez009@gmail.com",
+                "areaServed": "Quito, Ecuador",
+                "description": "Automatizacion, agentes de IA y sistemas web para negocios.",
+                "sameAs": [
+                    "https://wa.me/593959186832"
+                ]
+            }, {
+                "@type": "WebPage",
+                "@id": "https://devsmanager.netlify.app/#webpage",
+                "url": "https://devsmanager.netlify.app/",
+                "name": "DevsManager | IA y Automatizacion para negocios",
+                "isPartOf": {
+                    "@id": "https://devsmanager.netlify.app/#website"
+                },
+                "about": {
+                    "@id": "https://devsmanager.netlify.app/#organization"
+                },
+                "inLanguage": "es-EC"
+            }]
+        }
     </script>
-  </body>
+</body>
+
 </html>
